--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -226,8 +226,8 @@
   
   .stamina-banner__image {
     width: 100%;
-    height: 100%;
-    object-fit: cover; /* IMPORTANT: always cover */
+    height: auto;
+    object-fit: contain; /* IMPORTANT: always cover */
     object-position: center center; /* Center the important part */
   }
   
@@ -255,8 +255,8 @@
   @media (max-width: 480px) {
     .stamina-banner__image {
       width: 100%;
-      height: 100%;
-      object-fit: fill; /* IMPORTANT: always cover */
+      height: auto;
+      object-fit: contain; /* IMPORTANT: always cover */
       object-position: center center; /* Center the important part */
     }
     .stamina-banner {
@@ -285,8 +285,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-size: cover;
+    height: auto;
+    background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
     opacity: 0;
@@ -344,7 +344,7 @@
     }
   
     .design-carousel .dc-slide {
-      background-size: cover;
+      background-size: contain;
       background-position: center center;
     }
   }
@@ -387,7 +387,7 @@
   
   
     .design-carousel .dc-slide {
-      background-size: cover;
+      background-size: contain;
       background-position: top center;
     }
   
